[package]
name = "ttrx_ng"
version = "0.1.0"
authors = ["lpower <lmpower2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.13"
panic-halt = "0.2.0"
nrf52840-pac = "^0.9.0"
nrf52840-hal = "^0.11.0"
[profile.release]
opt-level = 'z'
lto = true
